--- a/AmesHousingPrices.ipynb
+++ b/AmesHousingPrices.ipynb
@@ -1,29 +1,41 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "c2bfcf32-7f27-48e9-b8f3-a6cb7bbc22d6",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "# Plan\n",
-    "1. First we need to take a look at the dataset and understand it(shape, size, features, types of features, null values)\n",
-    "2. Then we could do our EDA(exploratory data analysis) as boxplotting each feature to check for outliers, !! i just knew that the above is also considered EDA\n"
-   ]
+    "1. Frame the problem and look at the big picture.\n",
+    "2. Get the data.\n",
+    "3. Explore the data to gain insights.\n",
+    "4. Prepare the data to better expose the underlying data patterns to Machine Learn‐\n",
+    "ing algorithms.\n",
+    "5. Explore many different models and shortlist the best ones.\n",
+    "6. Fine-tune your models and combine them into a great solution.\n",
+    "7. Present your solution.\n",
+    "8. Launch, monitor, and maintain your system."
+   ],
+   "id": "2eb951999241a36b"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-12T10:13:44.233674Z",
+     "start_time": "2025-09-12T10:13:44.232254Z"
+    }
+   },
    "cell_type": "code",
-   "execution_count": null,
-   "id": "46f14968-42ec-47ce-8a25-4fc9786c5a48",
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "execution_count": null,
+   "source": "",
+   "id": "5a0b7c6565e132dc"
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (venv_for_ml)",
    "language": "python",
-   "name": "python3"
+   "name": "venv_for_ml"
   },
   "language_info": {
    "codemirror_mode": {
